More refactoring + fxml for BoardOverview working

--- a/client/src/main/resources/client/scenes/CardOverview.fxml
+++ b/client/src/main/resources/client/scenes/CardOverview.fxml
@@ -8,7 +8,7 @@
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="client.scenes.CardOverviewCtrl"
-            stylesheets="@./client/scenes/CardOverview.css"
+            stylesheets="@./css/CardOverview.css"
             fx:id="cardOverview"
             prefWidth="300"
             prefHeight="100">
