--- a/client/src/main/resources/client/scenes/BoardOverview.fxml
+++ b/client/src/main/resources/client/scenes/BoardOverview.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="client.scenes.BoardOverview"
-            prefHeight="400.0" prefWidth="600.0">
+<!-- AnchorPane xmlns="http://javafx.com/javafx"
+    xmlns:fx="http://javafx.com/fxml"
+    fx:controller="client.scenes.BoardOverviewCtrl"
+    prefHeight="400.0" prefWidth="600.0" -->
+<!-- /AnchorPane -->
 
-</AnchorPane>
+<ScrollPane hbarPolicy="ALWAYS" layoutX="10.0" layoutY="40.0" stylesheets="@./css/BoardOverview.css" vbarPolicy="NEVER" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
+
+        <StackPane>
+            <HBox fx:id="outerHBox">
+                <HBox fx:id="innerHBox">
+
+                </HBox>
+                <Button fx:id="newListButton" onAction="#BoardOverviewCtrl" text="+">
+                    <tooltip><Tooltip text="Add a new list" /></tooltip>
+                </Button>
+            </HBox>
+        </StackPane>
+
+    </ScrollPane>
