--- a/client/src/main/resources/client/scenes/CardComponent.fxml
+++ b/client/src/main/resources/client/scenes/CardComponent.fxml
@@ -8,7 +8,7 @@
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="client.scenes.CardComponentCtrl"
-            stylesheets="@./css/CardOverview.css"
+            stylesheets="@css/CardComponent.css"
             fx:id="cardOverview"
             prefWidth="300"
             prefHeight="100">
