--- a/client/src/main/resources/client/scenes/BoardComponent.fxml
+++ b/client/src/main/resources/client/scenes/BoardComponent.fxml
@@ -3,8 +3,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root type = "javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml" >
-    <ScrollPane hbarPolicy="ALWAYS" layoutX="10.0" layoutY="40.0" stylesheets="@css/BoardComponent.css" vbarPolicy="NEVER" VBox.vgrow ="ALWAYS">
+<fx:root type = "javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml" stylesheets="@./css/BoardComponent.css" >
+    <ScrollPane hbarPolicy="ALWAYS" layoutX="10.0" layoutY="40.0" vbarPolicy="NEVER" VBox.vgrow ="ALWAYS">
 
         <StackPane>
             <HBox fx:id="outerHBox">
