Fixed css rules
Now cards have the correct height, but they still have no colors; and both of the scrolls (horizontal, vertical) are not working

--- a/client/src/main/resources/client/scenes/ListComponent.fxml
+++ b/client/src/main/resources/client/scenes/ListComponent.fxml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml" VBox.vgrow ="ALWAYS" stylesheets="@./css/ListComponent.css" >
+<fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml" fx:id="listVBox" VBox.vgrow ="ALWAYS" stylesheets="@./css/ListComponent.css" >
     <HBox fx:id="titleHolder">
         <TextField fx:id="titleField">
 
