--- a/client/src/main/resources/client/scenes/ListComponent.fxml
+++ b/client/src/main/resources/client/scenes/ListComponent.fxml
@@ -5,15 +5,14 @@
 
 <fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml" fx:id="listVBox" VBox.vgrow ="ALWAYS" stylesheets="@./css/ListComponent.css" >
     <HBox fx:id="titleHolder">
-        <TextField fx:id="titleField">
-
-        </TextField>
-        <Button fx:id="deleteListBtn" text="x" onAction="#deleteList">
+        <TextField fx:id="titleField" HBox.hgrow="ALWAYS" text="Empty title"></TextField>
+        <Button fx:id="deleteListBtn" text="X" onAction="#deleteList">
             <tooltip><Tooltip text="Delete this list" /></tooltip>
         </Button>
     </HBox>
-    <VBox fx:id="cards">
 
+
+    <VBox fx:id="cards">
     </VBox>
     <Button fx:id="addCardBtn" text="+" onAction="#addCard">
         <tooltip><Tooltip text="Add a new card" /></tooltip>
