--- a/client/src/main/resources/client/scenes/css/ListComponent.css
+++ b/client/src/main/resources/client/scenes/css/ListComponent.css
@@ -14,7 +14,7 @@
 }
 
 #listVBox {
-    -fx-min-height: 450.0;
+    -fx-height: 450.0;
     -fx-pref-width: 180.0;
     -fx-border-color: black;
     -fx-border-width: 1px;
