Loading fxml and controllers in main,mainTalioCtrl

--- a/client/src/main/resources/client/scenes/CreateBoard.fxml
+++ b/client/src/main/resources/client/scenes/CreateBoard.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CreateBoardCtrl">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.CreateBoardCtrl">
    <children>
       <TextField id="fieldBoardName" layoutX="226.0" layoutY="169.0" />
       <Label layoutX="90.0" layoutY="173.0" text="Board Name" />
