fxml fixing the id

--- a/client/src/main/resources/client/scenes/ServerConnection.fxml
+++ b/client/src/main/resources/client/scenes/ServerConnection.fxml
@@ -6,11 +6,11 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.ServerConnectionCtrl">
    <children>
-      <TextField id="fieldServerAddress" layoutX="89.0" layoutY="169.0" prefHeight="26.0" prefWidth="302.0" promptText="Enter the server URL." />
+      <TextField fx:id="fieldServerAddress" layoutX="89.0" layoutY="169.0" prefHeight="26.0" prefWidth="302.0" promptText="Enter the server URL." />
       <Label layoutX="153.0" layoutY="83.0" text="Connect to a Server">
          <font>
             <Font size="18.0" />
          </font></Label>
-      <Button id="buttonJoin" layoutX="419.0" layoutY="169.0" mnemonicParsing="false" onAction="#clickConnectServer" prefHeight="26.0" prefWidth="90.0" text="Connect" />
+      <Button fx:id="buttonJoin" layoutX="419.0" layoutY="169.0" mnemonicParsing="false" onAction="#clickConnectServer" prefHeight="26.0" prefWidth="90.0" text="Connect" />
    </children>
 </AnchorPane>
