--- a/client/src/main/resources/client/scenes/JoinBoardCode.fxml
+++ b/client/src/main/resources/client/scenes/JoinBoardCode.fxml
@@ -12,5 +12,6 @@
             <Font size="18.0" />
          </font></Label>
       <Button fx:id="buttonJoin" layoutX="419.0" layoutY="169.0" mnemonicParsing="false" onAction="#clickJoinBoard" prefHeight="26.0" prefWidth="90.0" text="Join" />
+      <Button fx:id="buttonBack" layoutX="27.0" layoutY="32.0" mnemonicParsing="false" onAction="#clickBackHome" text="&lt;-- Back to Home" />
    </children>
 </AnchorPane>
