--- a/client/src/main/resources/client/scenes/css/ListComponent.css
+++ b/client/src/main/resources/client/scenes/css/ListComponent.css
@@ -15,7 +15,7 @@
 
 #listVBox {
     -fx-max-height: 450.0;
-    -fx-pref-width: 195.0;
+    -fx-min-width: 195.0;
     -fx-border-color: black;
     -fx-border-width: 1px;
     -fx-background-color: #e6e6e6;
