Added the changes discussed in the review

--- a/client/src/main/resources/client/scenes/BoardScene.fxml
+++ b/client/src/main/resources/client/scenes/BoardScene.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root type = "javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml" stylesheets="@./css/BoardComponent.css" >
+<AnchorPane xmlns:fx="http://javafx.com/fxml" stylesheets="@./css/BoardComponent.css" fx:controller="client.scenes.BoardCtrl">
 
     <ToolBar prefHeight="120.0" prefWidth="800.0" AnchorPane.topAnchor="0">
         <items>
@@ -30,4 +30,4 @@
             <tooltip><Tooltip text="Add a new list" /></tooltip>
         </Button>
     </HBox>
-</fx:root>
+</AnchorPane>
