--- a/client/src/main/resources/client/scenes/CreateBoard.fxml
+++ b/client/src/main/resources/client/scenes/CreateBoard.fxml
@@ -11,7 +11,7 @@
          <font>
             <Font size="18.0" />
          </font></Label>
-      <Button fx:id="buttonCreate" layoutX="419.0" layoutY="169.0" mnemonicParsing="false" onAction="#clickCreateBoard" prefHeight="26.0" prefWidth="90.0" text="Join" />
+      <Button fx:id="buttonCreate" layoutX="419.0" layoutY="169.0" mnemonicParsing="false" onAction="#clickCreateBoard" prefHeight="26.0" prefWidth="90.0" text="Create" />
       <Button fx:id="buttonBack" layoutX="27.0" layoutY="32.0" mnemonicParsing="false" onAction="#clickBackHome" text="&lt;-- Back to Home" />
    </children>
 </AnchorPane>
