--- a/client/src/main/resources/client/scenes/JoinBoard.fxml
+++ b/client/src/main/resources/client/scenes/JoinBoard.fxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.JoinBoardCtrl">
    <children>
       <TextField fx:id="fieldBoardCode" layoutX="89.0" layoutY="169.0" prefHeight="26.0" prefWidth="302.0" promptText="Enter the boad invitation given to you." />
@@ -12,6 +16,13 @@
             <Font size="18.0" />
          </font></Label>
       <Button fx:id="buttonJoin" layoutX="419.0" layoutY="169.0" mnemonicParsing="false" onAction="#clickJoinBoard" prefHeight="26.0" prefWidth="90.0" text="Join" />
-      <Button fx:id="buttonBack" layoutX="27.0" layoutY="32.0" mnemonicParsing="false" onAction="#clickBackHome" text="&lt;-- Back to Home" />
+      <Button fx:id="buttonBack" layoutX="27.0" layoutY="32.0" mnemonicParsing="false" onAction="#clickBackHome">
+      <graphic>
+         <ImageView fx:id="myImage" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="https://cdn-icons-png.flaticon.com/512/0/340.png"/>
+         </ImageView>
+      </graphic>
+      <tooltip><Tooltip text="Return to Homepage" /></tooltip>
+   </Button>
    </children>
 </AnchorPane>
