--- a/client/src/main/resources/client/scenes/CardComponent.fxml
+++ b/client/src/main/resources/client/scenes/CardComponent.fxml
@@ -4,14 +4,20 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <fx:root type="javafx.scene.layout.AnchorPane"
-            xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            stylesheets="@./css/CardComponent.css"
-            fx:id="cardOverview"
-            prefWidth="220"
-            prefHeight="100">
+         xmlns="http://javafx.com/javafx"
+         xmlns:fx="http://javafx.com/fxml"
+         stylesheets="@./css/CardComponent.css"
+         fx:id="cardOverview"
+         prefWidth="220"
+         prefHeight="100">
     <!-- TODO we can probably remove the prefWidth and prefHeight -->
     <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
           AnchorPane.topAnchor="0.0"
@@ -19,7 +25,14 @@
         <HBox maxWidth="Infinity" styleClass="hbox">
             <TextField fx:id="title" HBox.hgrow="ALWAYS" onAction="#saveTitle"/>
             <!-- TODO replace the "X" with a proper image -->
-            <Button fx:id="deleteButton" text="X" onAction="#delete"></Button>
+            <Button fx:id="deleteButton" onAction="#delete">
+                <graphic>
+                    <ImageView fx:id="myImage" fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                        <Image url="@/images/bin.png"/>
+                    </ImageView>
+                </graphic>
+                <tooltip><Tooltip text="Delete card from database" /></tooltip>
+            </Button>
         </HBox>
         <!-- TODO perhaps add a description indicator somewhere around here -->
         <HBox maxWidth="Infinity" styleClass="hbox">
