--- a/client/src/main/resources/client/scenes/ServerConnection.fxml
+++ b/client/src/main/resources/client/scenes/ServerConnection.fxml
@@ -3,9 +3,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.ServerConnectionCtrl">
    <children>
       <TextField fx:id="fieldServerAddress" layoutX="89.0" layoutY="169.0" prefHeight="26.0" prefWidth="302.0" promptText="Enter the server URL." />
@@ -14,7 +16,14 @@
             <Font size="18.0" />
          </font></Label>
       <Button fx:id="buttonJoin" layoutX="419.0" layoutY="169.0" mnemonicParsing="false" onAction="#clickConnectServer" prefHeight="26.0" prefWidth="90.0" text="Connect" />
-      <Button fx:id="buttonBack" layoutX="27.0" layoutY="32.0" mnemonicParsing="false" onAction="#clickBackHome" text="&lt;-- Back to Home" />
+      <Button fx:id="buttonBack" layoutX="27.0" layoutY="32.0" mnemonicParsing="false" onAction="#clickBackHome">
+      <graphic>
+         <ImageView fx:id="myImage" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="https://cdn-icons-png.flaticon.com/512/0/340.png"/>
+         </ImageView>
+      </graphic>
+         <tooltip><Tooltip text="Return to Homepage" /></tooltip>
+   </Button>
       <Button layoutX="524.0" layoutY="169.0" mnemonicParsing="false" onAction="#setDefaultServer" prefHeight="27.0" prefWidth="90.0" text="Default" />
    </children>
 </AnchorPane>
