--- a/client/src/main/resources/client/scenes/BoardSettings.fxml
+++ b/client/src/main/resources/client/scenes/BoardSettings.fxml
@@ -1,11 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Line?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardSettingsCtrl">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardSettingsCtrl">
    <children>
-      <TextField fx:id="fieldBoardName" layoutX="34.0" layoutY="29.0" />
+      <TextField fx:id="fieldBoardName" layoutX="34.0" layoutY="29.0" prefHeight="26.0" prefWidth="206.0" />
+      <Line endX="437.800048828125" endY="-1.52587890625E-5" layoutX="131.0" layoutY="72.0" startX="-100.0" />
+      <Label layoutX="30.0" layoutY="98.0" prefHeight="18.0" prefWidth="78.0" text="Board colors:" />
+      <Label layoutX="331.0" layoutY="98.0" prefHeight="18.0" prefWidth="61.0" text="List colors:" />
+      <Button fx:id="resetColorsBoard" layoutX="111.0" layoutY="95.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="102.0" text="Reset Colors" />
+      <Button fx:id="resetColorsLists" layoutX="400.0" layoutY="95.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="102.0" text="Reset Colors" />
+      <Label layoutX="44.0" layoutY="139.0" text="Background:" />
+      <Label layoutX="333.0" layoutY="139.0" text="Background:" />
+      <Label layoutX="44.0" layoutY="172.0" text="Font:" />
+      <Label layoutX="331.0" layoutY="172.0" text="Font:" />
+      <Line endX="437.800048828125" endY="-1.52587890625E-5" layoutX="124.0" layoutY="207.0" startX="-100.0" />
+      <Label layoutX="30.0" layoutY="227.0" text="Card color schemes:" />
+      <Label layoutX="168.0" layoutY="228.0" text="B:" />
+      <Label layoutX="193.0" layoutY="228.0" text="F:" />
+      <Button fx:id="setDefaultScheme1" layoutX="237.0" layoutY="247.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="94.0" text="set as default" />
+      <Button fx:id="setDefaultScheme2" layoutX="237.0" layoutY="292.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="94.0" text="set as default" />
+      <Button fx:id="setDefaultScheme3" layoutX="237.0" layoutY="339.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="94.0" text="set as default" />
+      <TextField fx:id="scheme1Name" layoutX="9.0" layoutY="247.0" prefHeight="26.0" prefWidth="141.0" />
+      <TextField fx:id="scheme2Name" layoutX="9.0" layoutY="292.0" prefHeight="26.0" prefWidth="141.0" />
+      <TextField fx:id="scheme3Name" layoutX="9.0" layoutY="339.0" prefHeight="26.0" prefWidth="141.0" />
+      <ColorPicker fx:id="cpBackgroundBoard" layoutX="143.0" layoutY="134.0" prefHeight="26.0" prefWidth="38.0">
+         <value>
+            <Color red="0.729411780834198" green="0.729411780834198" blue="0.729411780834198" />
+         </value></ColorPicker>
+      <ColorPicker fx:id="cpFontBoard" layoutX="143.0" layoutY="167.0" prefHeight="26.0" prefWidth="38.0">
+         <value>
+            <Color />
+         </value></ColorPicker>
+      <ColorPicker fx:id="cpFontLists" layoutX="432.0" layoutY="167.0" prefHeight="26.0" prefWidth="38.0">
+         <value>
+            <Color />
+         </value></ColorPicker>
+      <ColorPicker fx:id="cpBackgroundLists" layoutX="432.0" layoutY="135.0" prefHeight="26.0" prefWidth="38.0">
+         <value>
+            <Color red="0.8705882430076599" green="0.8705882430076599" blue="0.8705882430076599" />
+         </value></ColorPicker>
+      <Button layoutX="470.0" layoutY="29.0" mnemonicParsing="false" onAction="#save" text="Save" />
    </children>
 </AnchorPane>
+
