--- a/client/src/main/resources/client/scenes/BoardSettings.fxml
+++ b/client/src/main/resources/client/scenes/BoardSettings.fxml
@@ -4,18 +4,19 @@
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.shape.Line?>
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardSettingsCtrl">
-   <children>
-      <TextField fx:id="fieldBoardName" layoutX="34.0" layoutY="29.0" prefHeight="26.0" prefWidth="206.0" />
+    <children>
+   <TextField fx:id="fieldBoardName" layoutX="34.0" layoutY="29.0" prefHeight="26.0" prefWidth="206.0" />
       <Line endX="437.800048828125" endY="-1.52587890625E-5" layoutX="131.0" layoutY="72.0" startX="-100.0" />
       <Label layoutX="30.0" layoutY="98.0" prefHeight="18.0" prefWidth="78.0" text="Board colors:" />
       <Label layoutX="331.0" layoutY="98.0" prefHeight="18.0" prefWidth="61.0" text="List colors:" />
-      <Button fx:id="resetColorsBoard" layoutX="111.0" layoutY="95.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="102.0" text="Reset Colors" />
-      <Button fx:id="resetColorsLists" layoutX="400.0" layoutY="95.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="102.0" text="Reset Colors" />
+      <Button fx:id="resetColorsBoard" layoutX="111.0" layoutY="95.0" mnemonicParsing="false" onAction="#resetBoardColors" prefHeight="26.0" prefWidth="102.0" text="Reset Colors" />
+      <Button fx:id="resetColorsLists" layoutX="400.0" layoutY="95.0" mnemonicParsing="false" onAction="#resetListColors" prefHeight="26.0" prefWidth="102.0" text="Reset Colors" />
       <Label layoutX="44.0" layoutY="139.0" text="Background:" />
       <Label layoutX="333.0" layoutY="139.0" text="Background:" />
       <Label layoutX="44.0" layoutY="172.0" text="Font:" />
@@ -47,6 +48,10 @@
             <Color red="0.8705882430076599" green="0.8705882430076599" blue="0.8705882430076599" />
          </value></ColorPicker>
       <Button layoutX="470.0" layoutY="29.0" mnemonicParsing="false" onAction="#save" text="Save" />
-   </children>
+      <Button layoutX="543.0" layoutY="28.0" mnemonicParsing="false" onAction="#deleteBoard" prefHeight="25.0" prefWidth="25.0">
+         <ImageView  fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="https://cdn-icons-png.flaticon.com/512/860/860829.png"/>
+         </ImageView>
+      </Button>
+    </children>
 </AnchorPane>
-
