Created a TitleField Component that can be used for an editable title, both in the List and the Card Overview Components (perhaps even for the Board Overview Component). Integrated the Title Field Component into the List Component. Ref #99.

--- a/client/src/main/resources/client/Common.css
+++ b/client/src/main/resources/client/Common.css
@@ -3,5 +3,9 @@
     -fx-color-background-dark: rgb(181, 217, 191);
     -fx-color-foreground-accent: rgb(26, 255, 105);
     -fx-padding: 0;
-    -fx-font-family: Verdana;
+}
+
+* {
+    -fx-font-family: "Segoe UI";
+    -fx-font-size: 13;
 }
