--- a/client/src/main/resources/client/components/TitleField.css
+++ b/client/src/main/resources/client/components/TitleField.css
@@ -10,3 +10,11 @@
 .text-field:disabled {
     -fx-opacity: 1;
 }
+
+/**
+ This magic bit here makes it so that the prompt text "Enter a title" stays until text is entered,
+ instead of the default behaviour, which clears the prompt text on receiving focus
+*/
+.text-input, .text-input:focused {
+    -fx-prompt-text-fill: derive(-fx-control-inner-background, -30%);
+}
