--- a/client/src/main/resources/client/Common.css
+++ b/client/src/main/resources/client/Common.css
@@ -1,8 +1,7 @@
-.root {
+* {
     -fx-color-background-light: rgb(247, 255, 249);
-    -fx-color-background-dark: rgb(181, 217, 191);
+    -fx-color-background-dark: rgb(236, 241, 239);
     -fx-color-foreground-accent: rgb(26, 255, 105);
-    -fx-padding: 0;
 }
 
 * {
