--- a/client/src/main/resources/client/scenes/CardComponent.fxml
+++ b/client/src/main/resources/client/scenes/CardComponent.fxml
@@ -17,32 +17,39 @@
          xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
          stylesheets="@./css/CardComponent.css"
-         fx:id="cardOverview"
-         prefWidth="280"
-         prefHeight="100">
-    <!-- TODO we can probably remove the prefWidth and prefHeight -->
+         fx:id="cardOverview">
     <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
           AnchorPane.topAnchor="0.0"
           styleClass="vbox">
         <HBox maxWidth="Infinity" styleClass="hbox">
             <TitleField fx:id="titleField"/>
-            <!-- TODO replace the "X" with a proper image -->
             <Button fx:id="deleteButton" onAction="#delete">
                 <graphic>
-                    <ImageView fx:id="myImage" fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                    <ImageView fx:id="myImage" fitHeight="18.0" fitWidth="18.0"
+                               pickOnBounds="true" preserveRatio="true" smooth="true">
                         <Image url="@/images/bin.png"/>
                     </ImageView>
                 </graphic>
-                <tooltip><Tooltip text="Delete card from database" /></tooltip>
+                <tooltip>
+                    <Tooltip text="Delete card from database"/>
+                </tooltip>
             </Button>
         </HBox>
         <!-- TODO perhaps add a description indicator somewhere around here -->
-        <HBox maxWidth="Infinity" styleClass="hbox">
-            <ProgressBar HBox.hgrow="ALWAYS" fx:id="subtaskProgress" maxWidth="Infinity"/>
+        <HBox fx:id="detailsContainer" maxWidth="Infinity" styleClass="hbox">
+            <ImageView fx:id="descriptionIcon" fitHeight="18.0" fitWidth="18.0"
+                       preserveRatio="true">
+                <Image url="@/images/description.png"/>
+            </ImageView>
+
+            <ImageView fx:id="checkboxIcon" fitHeight="18.0" fitWidth="18.0"
+                       preserveRatio="true">
+                <Image url="@/images/checkbox.png"/>
+            </ImageView>
             <!-- TODO fix the alignment of this label - it appears too low, compared to the
-                  progress bar
-             -->
+                  progress bar -->
             <Label HBox.hgrow="NEVER" fx:id="subtaskLabel"/>
+            <ProgressBar HBox.hgrow="ALWAYS" fx:id="subtaskProgress" maxWidth="Infinity"/>
         </HBox>
         <FlowPane fx:id="tagsContainer" styleClass="flow-pane"/>
     </VBox>
