--- a/client/src/main/resources/client/scenes/css/CardComponent.css
+++ b/client/src/main/resources/client/scenes/css/CardComponent.css
@@ -1,19 +1,22 @@
 @import url(../../Common.css);
 
-.root {
-    -fx-background-color: -fx-color-background-dark;
+* {
+    -fx-color-background: -fx-color-background-dark;
+    -fx-color-foreground: #000000;
 }
 
 #cardOverview {
-    -fx-background: #808080;
+    -fx-background-color: -fx-color-background-dark;
     -fx-padding: 10;
-    /*this is only to see the cards a bit better*/
-    -fx-border-color: black;
-    -fx-border-width: 1px;
+    /* this is only to see the cards a bit better */
+    /*-fx-border-color: black;
+    -fx-border-width: 1px;*/
+    -fx-border-radius: 5;
+    -fx-background-radius: 5;
 }
 
 #deleteButton {
-    -fx-background-color: #d3d3d3;
+    -fx-background-color: transparent;
     -fx-border-style: none;
 }
 
@@ -31,12 +34,12 @@
 }
 
 .progress-bar .bar {
-    -fx-background-color: #d6f6d5;
+    -fx-background-color: -fx-color-foreground;
     -fx-background-insets: 0, 1, 2;
     -fx-padding: 0.416667em;
 }
 
 #subtaskProgress > .track {
-    -fx-background-color: #d8d8d8;
+    -fx-background-color: ladder(grey, -fx-color-background 0%, -fx-color-foreground 100%);
     -fx-background-insets: 0;
 }
