--- a/client/src/main/resources/client/scenes/BoardSettings.fxml
+++ b/client/src/main/resources/client/scenes/BoardSettings.fxml
@@ -50,16 +50,16 @@
             <Image url="https://cdn-icons-png.flaticon.com/512/860/860829.png" />
          </ImageView>
       </Button>
-      <ScrollPane layoutX="30.0" layoutY="249.0" prefHeight="115.0" prefWidth="278.0">
+      <ScrollPane layoutX="30.0" layoutY="249.0" prefHeight="115.0" prefWidth="278.0" hbarPolicy="NEVER">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
-               <children>
+<!--          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="114.0" prefWidth="258.0">-->
+<!--               <children>-->
                   <VBox fx:id="presetsBox" layoutX="1.0" layoutY="-2.0" prefHeight="115.0" prefWidth="262.0" />
-                  <Button layoutX="83.0" layoutY="119.0" mnemonicParsing="false" onAction="#addColorPreset" prefHeight="26.0" prefWidth="121.0" text="add a color scheme" />
-               </children>
-            </AnchorPane>
+<!--               </children>-->
+<!--            </AnchorPane>-->
         </content>
       </ScrollPane>
       <Label layoutX="226.0" layoutY="227.0" prefHeight="18.0" prefWidth="66.0" text="Default:" />
+      <Button layoutX="108.0" layoutY="372.0" mnemonicParsing="false" onAction="#addColorPreset" prefHeight="26.0" prefWidth="121.0" text="add a color scheme" />
     </children>
 </AnchorPane>
